Inclusão do arquivo index.htm

--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,11 @@
 <html>
-  <head>
+
+<head>
     <title>Exemplo</title>
-  </head>
-<body>
-  Exemplo de CI/CD utilizando VSCODE, GITHUB, AWS CODEPIPELINE e AWS ELASTIC BEANSTALK
+</head>
+
+<body style="background-color: blue;">
+    Exemplo de CI/CD utilizando VSCODE, GITHUB, AWS CODEPIPELINE e AWS ELASTIC BEANSTALK
 </body>
+
 </html>
