Alteração do arquivo index.htm, titulo php

--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,19 @@
-<html>
+<?php
 
-<head>
-    <title>Exemplo</title>
-</head>
+$titulo = "Exemplo";
 
-<body style="background-color: blue;">
-    Exemplo de CI/CD utilizando VSCODE, GITHUB, AWS CODEPIPELINE e AWS ELASTIC BEANSTALK
-</body>
+?>
+    <html>
 
-</html>
+    <head>
+        <title>Exemplo</title>
+    </head>
+
+    <body style="background-color: blue;">
+        <h1>
+            <?php print $titulo; ?>
+        </h1>
+        Exemplo de CI/CD utilizando VSCODE, GITHUB, AWS CODEPIPELINE e AWS ELASTIC BEANSTALK
+    </body>
+
+    </html>
